--- a/style.css
+++ b/style.css
@@ -26,7 +26,7 @@ main section .lx-card {
   background-color: white;
 }
 main section model-viewer {
-  width: 50rem;
+  width: 100%;
   height: 50rem;
   background-color: white;
 }
